# artemis-hardware

./: .gitmodules  LICENSE  README.md  artemis_thermal_lab.dwg  artemis_thermal_lab.dwl2
CAD Models/Hiapo 3D Print Structure/STEP/: bottom.STEP
CAD Models/Hiapo 3D Print Structure/STL (already prepped for printing)/: quick note.txt
CAD-model/: README.txt
Eagle Designs/Antenna Board/: Antenna Board v2 BOM.csv  Antenna Board v2.brd  Antenna Board v2.sch  Antenna Board v2_00.pro  Antenna Board v2_02.job  Antenna Board v2_02.pro  Antenna Board v3.brd  Antenna Board v5.0.b#1  Antenna Board v5.0.b#2  Antenna Board v5.0.brd  Antenna Board v5.0.s#1  Antenna Board v5.0.s#2  Antenna Board v5.0.sch
Eagle Designs/Battery Board/batteryboard-v2.1/: BOM batteryboard.xlsx  batteryboard.kicad_pcb  fp-info-cache
Eagle Designs/Battery Board/batteryboard-v2.2 (Eagle)/: batteryboard-v2.2.brd  batteryboard-v2.2.s#1
Eagle Designs/Battery Board/batteryboard-v2.2 (KiCad)/: BOM batteryboard.csv  _autosave-batteryboard.sch  batteryboard.net  batteryboard.sch
Eagle Designs/Battery Board/batteryboard-v3.0/: Battery_Board_v3.0.b#3  Battery_Board_v3.0.s#1
Eagle Designs/Mock Transmitter Board/: OBCv4.23.b#1  OBCv4.23.b#3  OBCv4.23.b#4  OBCv4.23.s#1  ground_station_boardv1.1.b#2
Eagle Designs/OBC/BBB_OBC v3/: BOM (OBC v3).xlsx  On Board Computer.brd
Eagle Designs/OBC/OBC_V4.24/: OBCv4.24.s#1
Eagle Designs/OBC/OBC_V4.24_RFplane/: OBCv4.24.b#1  OBCv4.24.b#2  OBCv4.24.brd  OBCv4.24.sch
Eagle Designs/OBC/OBC_v4.21/: OBCv4.21.brd  OBCv4.21.sch
Eagle Designs/OBC/OBC_v4.22/: OBCv4.22.brd
Eagle Designs/OBC/OBC_v4.23/: OBCv4.23.brd
Eagle Designs/OBC/OBC_v5.0/: OBCv5.0.b##  OBCv5.0.b#1  OBCv5.0.b#2  OBCv5.0.brd  OBCv5.0.s##  OBCv5.0.s#1  OBCv5.0.sch
Eagle Designs/PDU/Battery Charging Circuit/: Battery Charging Circuit.brd  Battery Charging Circuit.s##
Eagle Designs/PDU/PDUv2.1/: PDU_v2.1.sch
Eagle Designs/PDU/PDUv2.2/: PDU_v2.2.brd  PDU_v2.2.s##
Eagle Designs/PDU/PDUv3.0/: PDU_v3.0.brd  PDU_v3.0.sch  PDU_v3.1.b#1  PDU_v3.1.b#2  PDU_v3.1.s#2  PDU_v3.1.sch
Eagle Designs/Payload Board/: Payload BOM.csv
Eagle Designs/Radio Ground Station Board/: OBCv4.23.s#3  OBCv4.23.s#4  ground_station_boardv1.1.b#2  ground_station_boardv1.1.b#3  ground_station_boardv1.1.b#5  ground_station_boardv1.1.b#7  ground_station_boardv1.1.brd  ground_station_boardv1.1.s#1
Eagle Designs/Scintillator Detector/: MainPCB.brd  MainPCB.sch
Eagle Designs/Solar Panel Board/: Solar Panel Board v7.0.b#2  Solar Panel Board v7.0.brd  Solar Panel Board v7.0.s#2  Solar Panel Board v7.0.sch  Solar_Panel_Board_v5_1.brd  Solar_Panel_Board_v5_1.csv  Solar_Panel_Board_v6.1.sch  Solar_Panel_Board_v6.brd
Thermal/: artemis_thermal_lab.bak  artemis_thermal_lab.dwl  rcoptics (1).rco  tdthermo (1).tdp
Xometry/: README.md
cad-model/: README
cad-model/Hiapo 3D Print Structure/STEP/: bottom.STEP  mid.STEP  mid_skeletonized.STEP  top.STEP
cad-model/Hiapo 3D Print Structure/STL (already prepped for printing)/: bottom1.STL  mid.STL  quick note.txt  top1.STL  top2.STL
hardware/: On Board Computer.brd  On Board Computer.sch  README.md  Solar Panel Board.brd  Solar Panel Board.sch
hardware/CAD Models/: ArtemisR4.SLDASM  README.md  README.txt
hardware/Eagle Designs/Antenna/: Antenna Board BOM.csv  Antenna Board BOM.xlsx  Antenna Board v2.b#2  Antenna Board v2.b#3  Antenna Board v2.b#4  Antenna Board v2.b#5  Antenna Board v2.b#6  Antenna Board v2.b#7  Antenna Board v2.b#8  Antenna Board v2.b#9  Antenna Board v2.brd  Antenna Board v2.s#1  Antenna Board v2.s#2  Antenna Board v2.s#3  Antenna Board v2.s#4  (+23 more)
hardware/Eagle Designs/Antenna Board/: Antenna Board v2_04.job  Antenna Board v4.1.xlsx  Antenna Board v4.2.brd  Antenna Board v4.2.xlsx  Antenna Board v4.3.brd  Antenna Board v4.4.sch  Antenna Board v4.brd
hardware/cad-model/: Artemis V2.SLDASM  README.txt
hardware/xometry/: README.md  README.txt
scripts/: cloud9  config  cosmos-web  deploy-agents  deploy-raspi  install-cosmos  install-cosmos-web  update  update-agents  update-raspi  update-routes
software/BeagleBone/beaglebone/source/: CMakeLists.txt  QtCreatorDeployment.txt
software/BeagleBone/beaglebone/source/agents/: agent_heater.cpp  agent_pycubed.cpp  agent_raspi.cpp  agent_sun.cpp  agent_switch.cpp  agent_temp.cpp
software/BeagleBone/beaglebone/source/device/: ADT7311.cpp  CMakeLists.txt  GPIO.cpp  I2CDevice.cpp  OPT3001.cpp  PyCubed.cpp  SPIDevice.cpp  UARTDevice.cpp  switch.cpp
software/BeagleBone/beaglebone/source/tests/: CMakeLists.txt  device_test.cpp  pycubed_test.cpp  simpleagent_test.cpp  soh1_test.cpp  sun_dump.cpp  sun_test.cpp  switch_test.cpp  temp_dump.cpp  temp_test.cpp
software/BeagleBone/beaglebone/source/utility/: Device.cpp  SimpleAgent.cpp
software/PyCubed/: main.py
software/RaspberryPi/: payload.py  payload_basic.py  test_sensors.py
xometry/: README.txt
(+2511 files in other folders)
